# sage-vaccine-equity-agent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  experiment_v308.yaml  experiment_v323.yaml  experiment_v338.yaml
mcp/: config.json  server.py
n8n/: __init__.py
n8n/workflows/: sage_monitoring.json
src/adapters/: alerting_adapters_v1_s23.py  alerting_adapters_v8_s13.py  analytics_adapters_v3_s24.py  analytics_adapters_v6_s39.py  analytics_adapters_v6_s9.py  caching_adapters_v4_s25.py  caching_adapters_v9_s20.py  classification_adapters_v1_d114_c117.py  classification_adapters_v1_d194_c117.py  classification_adapters_v1_d359_c72.py  (+786 more)
tests/: conftest.py  conftest_v315.py  conftest_v330.py  conftest_v345.py  test_api.py  test_api_v305.py  test_api_v320.py  test_api_v335.py  test_connector_v314.py  test_connector_v329.py  test_connector_v344.py  test_distributed_v310.py  test_distributed_v325.py  test_distributed_v340.py  test_e2e_v315.py  test_e2e_v330.py  test_e2e_v345.py  test_eval_v304.py  test_eval_v319.py  test_eval_v334.py  test_evaluation.py  test_features_v311.py  test_features_v326.py  test_features_v341.py  test_inference_v313.py  test_inference_v328.py  test_inference_v343.py  test_integration.py  test_integration_v315.py  test_integration_v330.py  test_integration_v345.py  test_loader.py  test_model.py  test_model_v302.py  test_model_v317.py  test_model_v332.py  test_model_v347.py  test_pipeline_v301.py  test_pipeline_v316.py  test_pipeline_v331.py  (+11 more)
(+7271 files in other folders)
